edited user id:s to userId:s
